; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_get_value.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"submodule.%s.%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*, %struct.TYPE_5__*, i8*, i8*)* @get_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_value(i8** %0, i32* %1, %struct.TYPE_5__* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i8** %0, i8*** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %14 = call i32 @git_buf_clear(%struct.TYPE_5__* %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = call i32 @git_buf_printf(%struct.TYPE_5__* %15, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %17)
  store i32 %18, i32* %12, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %28, label %20

20:                                               ; preds = %5
  %21 = load i8**, i8*** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @git_config_get_string(i8** %21, i32* %22, i32 %25)
  store i32 %26, i32* %12, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %20, %5
  %29 = load i32, i32* %12, align 4
  store i32 %29, i32* %6, align 4
  br label %32

30:                                               ; preds = %20
  %31 = load i32, i32* %12, align 4
  store i32 %31, i32* %6, align 4
  br label %32

32:                                               ; preds = %30, %28
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @git_buf_clear(%struct.TYPE_5__*) #1

declare dso_local i32 @git_buf_printf(%struct.TYPE_5__*, i8*, i8*, i8*) #1

declare dso_local i32 @git_config_get_string(i8**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
